--- a/contactf_form.html
+++ b/contactf_form.html
@@ -7,41 +7,53 @@
     <script src="jquery-3.7.1.min.js"></script>
     <title>Interactive Contact Form</title>
 <script>
-$("#formValidation").val({
-    rules:{
-        nname:{
-            minlength: 1
-        }
-    },
-    messages: {
-    required: "Please enter your name",
-    minlength: "Name at least a character"
-  },
-    submitHandler: function(form){
-        form.submit();
-    }
+document.getElementById("contactform")
+$(document).ready(function(){
+    $(".w3-text-red").hide();
 });
+function validateform(){
+    var a = document.forms["formValidation"]["first_name"].value;
+        if (a==""){
+            $("#fname").show("fast");
+            return false;
+        } else {$("#fname").hide("fast")};
+    var b = document.forms["formValidation"]["last_name"].value;
+        if (b==""){
+            $("#lname").show("fast");
+            return false;
+        } else {$("#lname").hide("fast")};
+    var c = document.forms["formValidation"]["telp"].value;
+        if (length(c)=!12){
+            $("#telp").show("fast");
+            return false;
+        } else {$("#telp").hide("fast")};
+    var d = document.forms["formValidation"]["email"].value;
+        if (d==""){
+            $("#email").show("fast");
+            return false;
+        } else {$("#email").hide("fast")};
+}
 </script>
 </head>
 <body>
-    <div class="w3-container w3-indigo w3-center" style="padding-bottom: 24px;">
+    <div class="w3-container w3-black w3-center" style="padding-bottom: 24px;">
         <h1>Contact Form</h1>
         <p id="demo1"></p>
-        <div class="w3-container w3-blue w3-center">
-        <form class="w3-container" id="formValidation">
+        <div class="w3-container w3-black w3-center">
+        <form class="w3-container" name="formValidation" id="contactform" onsubmit="return validateform()">
             <table class="w3-table w3-bordered w3-border w3-card-4 w3-light-blue" style="width: 50%; margin-left: auto; margin-right: auto;">
                 <tr>
-                    <td><label>First Name</label><input class="w3-input w3-hover-grey" type="text" name="first_name" required></td>
-                    <td><label>Last Name</label><input class="w3-input w3-hover-grey" type="text" name="last_name" required></td>
+                    <td><label>First Name</label><input class="w3-input w3-hover-grey" type="text" name="first_name" placeholder="First name"><p id="fname" class="w3-text-red">*Please enter the first name</p></td>
+                    <td><label>Last Name</label><input class="w3-input w3-hover-grey" type="text" name="last_name" placeholder="Last name"><p id="lname" class="w3-text-red">*Please enter the last name</p></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><label>Phone Number <input class="w3-input w3-hover-grey" type="tel" placeholder="08XX-XXXX-XXXX" pattern="08[0-9]{2}[0-9]{4}[0-9]{4}" required></label></td>
+                    <td colspan="2"><label>Phone Number <input class="w3-input w3-hover-grey" type="tel" name="telp" placeholder="08XX-XXXX-XXXX" pattern="08[0-9]{2}[0-9]{4}[0-9]{4}"></label><p id="telp" class="w3-text-red">*Format 08XX-XXXX-XXXX</p></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><label>Email<input class="w3-input w3-hover-grey" type="email" required></label></td>
+                    <td colspan="2"><label>Email<input class="w3-input w3-hover-grey" type="email" name="email" placeholder="Email"><p id="email" class="w3-text-red">*Please enter email</p></label></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><input class="w3-input w3-small" type="submit" value="submit"></td>
+                    <td colspan="2"><input class="w3-input w3-small w3-button w3-grey" type="submit" value="Submit"></td>
                 </tr>
             </table>
         </form>
