--- a/image_gallery.html
+++ b/image_gallery.html
@@ -40,7 +40,7 @@ function opencat(evt) {
   }
   tablinks = document.getElementsByClassName("tablink");
   for (i = 0; i < 5; ++i) {
-    tablinks[i].className = tablinks[i].className.replace("w3-light-blue", "w3-blue");
+    tablinks[i].className = tablinks[i].className.replace("w3-light-blue", "");
   }
   evt.currentTarget.className += "w3-light-blue";
 }
