--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Home</title>
 <script>
     $(document).ready(function(){
-        $("td").click(function(){
+        $("a").click(function(){
             $(this).hide("slow" ,function(){
-                $("td").show("slow");
+                $("a").show("slow");
             $(this).append(" ✔");
             });
         });
@@ -35,7 +35,7 @@
                     <td class="w3-hover-opacity w3-hover-cyan"><a href="dropdown_surprise.html" target="_blank">Dropdown Surprise</a></td>
                 </tr>
                 <tr>
-                    <td class="w3-hover-opacity w3-hover-cyan"><a href="dynamic_price.html" target="_blank">Dynamic Price Calculator</a></td>
+                    <td class="w3-hover-opacity w3-hover-cyan"><a href="accordion.html" target="_blank">Accordion FAQs</a></td>
                 </tr>
             </table>
         </div>
